<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sharedUserId" />
    <string name="process" />
    <string name="application_name">Launcher</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name">Folder</string>
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="activity_not_found">Application is not installed on your phone.</string>
    <string name="configure_wallpaper">Configure...</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Applications</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_folder">New folder</string>
    <string name="group_live_folders">Folders</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="add_folder">Folder</string>
    <string name="add_clock">Clock</string>
    <string name="add_photo_frame">Picture frame</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="shortcut_installed">Shortcut \"%s\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"%s\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"%s\" already exists.</string>
    <string name="title_select_shortcut">Select shortcut</string>
    <string name="title_select_live_folder">Select folder</string>
    <string name="all_apps_button_label">All applications</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="menu_add">Add</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_gestures">Gestures</string>
    <string name="menu_settings">Settings</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an application to add shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows an application to remove shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an application to read the settings and shortcuts in Home.</string>
    <string name="permlab_write_settings">Write home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an application to change the settings and shortcuts in Home.</string>
    <string name="start_activity_failed">Failed to start, please try again</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="menu_edit">Editing mode</string>
    <string name="menu_sort">Sort desktop icons</string>
    <string name="menu_launcher_setting">Launcher settings</string>
    <string name="cant_remove_system_app">Unable to remove system application</string>
    <string name="uninstall_body_format">Remove application \"%s\"?</string>
    <string name="uninstall">Uninstall</string>
    <string name="cant_remove_folder">Unable to remove non-empty folder</string>
    <string name="pick_lockscreenwallpaper">Lockscreen wallpaper</string>
    <string name="lockscreenwallpaper_instructions">Set Lockscreen wallpaper</string>
    <string name="failed_to_drop">Moving failed</string>
    <string name="failed_to_drop_widget_nospace">Failed to move, not enough space!</string>
    <string name="failed_to_drop_widget_invalid">Plug-in invalid</string>
    <string name="failed_to_delete_temporary">Failed to delete, please try again.</string>
    <string name="widget_box_usage_hint">Drag widget to desired location.</string>
    <string name="widget_favorite_contacts_lable">Favorite Contacts</string>
    <string name="widget_favorite_contacts_edit">Edit</string>
    <string name="widget_favorite_contacts_style">Switch size</string>
    <string name="edit_folder_label">Modify the folder name</string>
    <string name="edit_folder_title">Edit folder</string>
    <string name="confirm_btn_label">OK</string>
    <string name="cancel_btn_label">Cancel</string>
    <string name="enable_hidden">Hide applications</string>
    <string name="show_hidden">Show hidden apps</string>
    <string name="set_password">Set password</string>
    <string name="sort_by_not_defined">Sort by default order</string>
    <string name="sort_by_frequency">Sort by frequency of use</string>
    <string name="sort_by_abc">Sort by app name</string>
    <string name="encryption">Encryption</string>
    <string name="preferences_title">Launcher Settings</string>
    <string name="preferences_general_title">Performance settings</string>
    <string name="pref_keep_in_memory_title">Keep in memory</string>
    <string name="pref_keep_in_memory_summary">Keep application in memory. App will not exit.</string>
    <string name="pref_render_in_truecolor_title">Hi-res graphics</string>
    <string name="pref_render_in_truecolor_summary">Turn on to enhance graphics.</string>
    <string name="pref_enable_drawing_cache_title">Drawing Cache</string>
    <string name="pref_enable_drawing_cache_summary">Turn off to free up memory, will cause some lag</string>
    <string name="pref_icon_shadow_title">Icon shadows</string>
    <string name="pref_icon_shadow_summary">Enable desktop icon shadows to be on / off</string>
    <string name="pref_screen_transformation_type_title">Transition effects</string>
    <string name="transformation_type_classic">Classic</string>
    <string name="transformation_type_classic_no_overshoot">Classic (No overshoot)</string>
    <string name="transformation_type_crossfade">Crossfade</string>
    <string name="transformation_type_falldown">Falldown</string>
    <string name="transformation_type_cube">3D Cube</string>
    <string name="transformation_type_leftpage">Page</string>
    <string name="transformation_type_stack">Cascading</string>
    <string name="transformation_type_rotate">Rotation</string>
    <string name="widget_gadget_player">Music_4x</string>
    <string name="buffering">Buffering...</string>
    <string name="emptyplaylist">Playlist is empty</string>
    <string name="sdcard_missing_title">SD card not found</string>
    <string name="sdcard_busy_title">SD card is not available or busy</string>
    <string name="unknown_artist_name">Unknown Artist</string>
    <string name="global_search_hint">Enter Keyword(s) To Search</string>
    <string name="widget_global_search">Global Search</string>
    <string name="system_tool">System Tools</string>
    <string name="durationformatshort" formatted="false">%2$2d:%5$02d</string>
    <string name="durationformatshort_padding_with_0" formatted="false">%2$02d:%5$02d</string>
    <string name="durationformatlong" formatted="false">%1$d:%3$02d:%5$02d</string>
</resources>
